java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint9-hints.pass
Create class "XXX" in package org.netbeans.test.java.hints
Create class "XXX" in org.netbeans.test.java.hints.AddCast9
